# r-olm

./: Cargo.toml  README.md
src/: authenticated_encryption.rs  lib.rs  olm_shared_secret.rs  rc_keys.rs
tests/: pkcs7.rs
